--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         "url": "https:\/\/pybrolachie.github.io\/LachiesLibrary\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "xxxx"
-            },"description": "This is my cool site","name": "Lachies Library"
+            },"description": "This Is Lachies Library","name": "Lachies Library"
     }
     </script></head>
     <body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
